@@ -1,3 +1,8 @@
+2005-05-03  Ben Elliston  <bje@au.ibm.com>
+
+	* infrun.c (handle_inferior_event): Update the comment about users
+	of stepped_after_stopped_by_watchpoint.
+
 2005-05-02  Corinna Vinschen  <vinschen@redhat.com>
 
 	* MAINTAINERS: Remove hint that sh64 doesn't build.
